Add a red color to h1

--- a/hello.html
+++ b/hello.html
@@ -4,12 +4,12 @@
         <title>Hello!</title>
     </head>
     <body>
-		<h1>
+		<h1 style="color:red;>
 			Welcome to my first html git!
 		</h1>
-	    	<h2>
+	    <h2>
 			Change in github!
-	    	</h2>
+	   	</h2>
         Hello, world!
     </body>
 <html>
