--- a/hello.html
+++ b/hello.html
@@ -4,12 +4,12 @@
         <title>Hello!</title>
     </head>
     <body>
-		<h1>
-			Welcome to my first html git!
-		</h1>
-	    	<h2>
-			Change in github!
-	    	</h2>
+	<h1>
+		Welcome to my first html git!
+	</h1>
+	<h2 style="color: blue;">
+		Change in github!
+	</h2>
         Hello, world!
     </body>
 <html>
