--- a/hello.html
+++ b/hello.html
@@ -2,13 +2,20 @@
 <html lang="en">
     <head>
         <title>Hello!</title>
+		<style>
+			h1{
+				color: blue;
+			}
+			h2{
+				color: red;
+			}
     </head>
     <body>
-		<h1 style="color:red;">
+		<h1>
 			Welcome to my first html git!
 		</h1>
-		<h2 style="color: blue;">
-		Change in github!
+		<h2>
+			Change in github!
 		</h2>
         Hello, world!
     </body>
