--- a/hello.html
+++ b/hello.html
@@ -8,7 +8,7 @@
 			Welcome to my first html git!
 		</h1>
 		<h2 style="color: blue;">
-		Change in github!
+			Change in github and style !
 		</h2>
         Hello, world!
     </body>
